--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres:latest
+    image: postgres:18
     container_name: taxee
     environment:
       POSTGRES_USER: pg
@@ -9,7 +9,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./.data:/var/lib/postgresql/data
+      - ./.data:/var/lib/postgresql
 
   adminer:
     image: adminer
